spade-tests/src/snapshots/spade_tests__ast_lowering__deprecation_status_is_inherited.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[deprecated = "module m"]
mod m {
    pub enum E {
        A,
        B,
    }
}

use m::E::A as X;


warning: Use of deprecated enum variant
  ┌─ testinput:9:5
  │
9 │ use m::E::A as X;
  │     ^^^^^^^
  │
  = note: module m
