spade-tests/src/snapshots/spade_tests__ast_lowering__domains_are_not_allowed_on_enums.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum T<'a> {
}


error: Type declarations do not support domains
  ┌─ testinput:1:8
  │
1 │ enum T<'a> {
  │        ^^ Domain in type declaration
