spade-tests/src/snapshots/spade_tests__ast_lowering__domains_are_not_allowed_on_structs.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct T<'a> {
}


error: Type declarations do not support domains
  ┌─ testinput:1:10
  │
1 │ struct T<'a> {
  │          ^^ Domain in type declaration
