spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_item_names.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn a() -> bool {
    true
}
fn a() -> bool {
    false
}


error: Multiple items with the same name
  ┌─ testinput:4:4
  │
1 │ fn a() -> bool {
  │    - Previous definition here
  ·
4 │ fn a() -> bool {
  │    ^ a is defined multiple times
