spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_item_names6.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn a() -> bool {
    true
}
mod x {fn b() -> bool {true}}
use x::b as a;


error: Multiple items with the same name
  ┌─ testinput:1:4
  │
1 │ fn a() -> bool {
  │    ^ a is defined multiple times
  ·
5 │ use x::b as a;
  │     ---- Previous definition here
